# LibraryManagementSystem

./: CMakeLists.txt  README.md  main.cpp
data/: books.csv  members.csv  transactions.csv
include/: Auth.h  Book.h  FileManager.h  Library.h  Member.h  Transaction.h  Utils.h
src/: Auth.cpp  Book.cpp  FileManager.cpp  Library.cpp  Member.cpp  Transaction.cpp
